Fixed the login button shifting off screen

--- a/client/main.css
+++ b/client/main.css
@@ -186,3 +186,7 @@ ul {
 .active{
     background-color: grey;
 }
+
+.login-buttons-dropdown-align-right{
+   margin-right: 400px;
+}
